[package]
name = "raypump-copytrading-bot"
version = "0.1.0"
edition = "2021"
authors = ["Harry Anderson <harran39318@gmail.com>"]

[dependencies]
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4.38"
lazy_static = "1.5.0"
anyhow = "1.0.53"
rusqlite = "0.34.0"
strum_macros = "0.27.1"
r2d2_sqlite = "0.27.0"
serde = "1.0.203"
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive"] }
bytemuck = "1.21.0"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
indicatif = "0.17.8"
rand = "0.8.5"
tracing = "0.1.40"
futures-util = "0.3.30"
borsh = { version = "1.5.3" }
borsh-derive = "1.5.3"
url = "2.3.1"
base64 = "0.13"
bincode = "1.3.3"
colored = "3.0.0"
bs64 = "0.1.2"

teloxide = { version = "0.13", features = ["macros"] }

tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-stream = "0.1.17"

anchor-lang = "=0.29.0"
anchor-client = { version = "0.28.0", features = ["async"] }

solana-sdk = "=1.16.27"
solana-client = "=1.16.27"
solana-account-decoder = "=1.16.27"
solana-transaction-status = "=1.16.27"
solana-transaction-status-client-types = "=2.1.0"

spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-client = "=0.7.1"

raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
] }

jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client" }
